...
    
    func profileFromView(profile: Profile) {
        view?.didFetchProfile(profile: profile)
    }
    
    func logout() {
        let alert = UIAlertController(title: "Пока-пока!",
                                      message: "Уверены что хотите выйти?",
                                      preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "Да", style: .default, handler: { [weak self] _ in
            guard let self = self else { return }
            self.profileHelper?.cleanKeyChain()
            self.profileHelper?.switchToSplashViewController()
            self.profileHelper?.cleanWebKit()
        }))
        alert.addAction(UIAlertAction(title: "Нет", style: .default, handler: { _ in }))
...
