...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0gF-ve-zwI" userLabel="Like Button">
                                                    <rect key="frame" x="335" y="0.0" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="42" id="Eum-Oz-e75"/>
                                                        <constraint firstAttribute="height" constant="42" id="L2w-Le-Sn8"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="dont_like" title=""/>
...
                                <connections>
                                    <outlet property="delegate" destination="RHN-0g-CtA" id="9y8-t5-DgK"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amo-XZ-M2Y" userLabel="Back Button">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="NSF-uj-Gux"/>
                                    <constraint firstAttribute="width" constant="48" id="fnU-Mk-IQe"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="chevron.backward" title=""/>
...
