...
        button.translatesAutoresizingMaskIntoConstraints = false
        
        let titleAttribute: [NSAttributedString.Key: Any] = [
            .font: UIFont.systemFont(ofSize: 17, weight: .bold)  ]
        
        
        let titleAttributedString = NSAttributedString(string: "Войти", attributes: titleAttribute)
        button.setAttributedTitle(titleAttributedString, for: .normal)
        button.addTarget(self, action: #selector(enterButtonPressed), for: .touchUpInside)
        
        view.addSubview(button)
        
        NSLayoutConstraint.activate([
...
